--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     <section id="about" class="about-us-section">
         <div class="container">
             <h2>About Us</h2>
-            <p>Created by: <strong>Mrityunjay Kumar</strong></p>
+            <p>Created by: <strong>Mrityunjay Prajapti</strong></p>
             <p>Languages Used: <strong>HTML,CSS, JS</strong></p>
             <p>
                 This website is designed and developed for checking creativity purpose only .
@@ -368,7 +368,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2024 HS KENZO. All Rights Reserved.</p>
+        <p>&copy; 2025 MP. All Rights Reserved.</p>
     </footer>
     <script>
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
@@ -409,3 +409,4 @@
 
 
 </html>
+
